add some changes

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,3 +15,10 @@ a {
 * {
   box-sizing: border-box;
 }
+
+.line-clamp {
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;  
+  overflow: hidden;
+}
